// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

enum Industry {
  Tech
  Games
  Social
  Finance
  Shopping
  Science
  Other
}

Table secure_accounts {
  id integer [pk, unique]
  created_at timestamp
  account_name varchar
  industry Industry
  two_factor_auth bool [default: false]
  recovery text [null]
  user_id integer
  bucket_id integer
  institution_id integer
}

Table super_secure_accounts {
  id integer [pk, unique]
  created_at timestamp
  account_name varchar
  pin integer
  min_length integer
  max_length integer
  industry Industry
  two_factor_auth bool [default: false]
  recovery text [null]
  user_id integer
  bucket_id integer
  institution_id integer
}

Table sso_accounts {
  id integer [pk, unique]
  created_at timestamp
  account_name varchar
  two_factor_auth bool [default: false]
  recovery text [null]
  user_id integer
  bucket_id integer
  institution_id integer
  sso_id integer
}

Table users {
  id integer [primary key]
  username varchar
  pass varchar
}

Table buckets {
  id integer [primary key]
  name varchar
  color varchar
  user_id integer
}

Table institutions {
  id integer [primary key]
  name varchar
  is_sso bool [default: false]
  alias varchar[] [null]
  website varchar [null]
  user_id integer
}

Ref: secure_accounts.user_id > users.id
Ref: secure_accounts.bucket_id > buckets.id
Ref: secure_accounts.institution_id > institutions.id

Ref: super_secure_accounts.user_id > users.id
Ref: super_secure_accounts.bucket_id > buckets.id
Ref: super_secure_accounts.institution_id > institutions.id

Ref: sso_accounts.user_id > users.id
Ref: sso_accounts.bucket_id > buckets.id
Ref: sso_accounts.institution_id > institutions.id
Ref: sso_accounts.sso_id > institutions.id

Ref: buckets.user_id > users.id
Ref: institutions.user_id > users.id
